regression/QF_BV/bvnor.smt2.expected.out
At line 9: syntax error, unexpected TK_NUM, expecting ')'
